# scrape-with-sel

./: .gitignore  .pre-commit-config.yaml  README.md  conftest.py  pyproject.toml  pytest.ini
.github/workflows/: ci-testing.yml
dags/: airflow-extract-node.py  airflow-load-node.py  airflow-transform-node.py  first-etl-dag.py  prove-things-work.py
python_template_repo/: main.py
src/: main.py  web_scrape.py
tests/: example_test.py  main_test.py  web_scrape_test.py
