[tool.poetry]
name = "scrape-with-sel"
version = "0.1.0"
description = ""
authors = ["Sribarrow <sribarrow@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.3"
pre-commit = "^2.20.0"
selenium = "^4.6.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"

[tool.poetry.scripts]
run_main = "src.main:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.core.masonry.api"
